# Insurance

./: .gitignore  WORKSPACE_STATE.md  demo.py  pyproject.toml  requirements.txt
docs/: AI_AUTOPILOT.md
docs/research/: chatgpt_ca_2026_research.md
docs/research/prompt a responses/: chatgpt.md  opus.md
docs/research/prompt b responses/: chatgpt.md  opus.md
docs/research/prompts/: PROMPT_A_coverage_and_costs.txt  PROMPT_B_plan_comparison.txt  README.txt
src/: __init__.py
src/insurance/: __init__.py  compare.py  data.py  geometric_mean.py  plans.py  scenarios.py
tests/: __init__.py
tests/insurance/: __init__.py  conftest.py  test_compare.py  test_coverage_gaps.py  test_geometric_mean.py  test_math_verification.py  test_plans.py  test_scenarios.py  test_wealth_ratio.py
